2009-09-29  Sanel <karijes@users.sourceforge.net>

	* edelib/Directory.h: newline at the end of the file or SunStudio 11 C++
	compiler will crash

2009-09-26  Sanel <karijes@users.sourceforge.net>

	* edelib/*.h: added EDELIB part to header protector 
	* edelib/StrUtil.h: dumping isws() helper function; stringtok() will
	now directly use strchr()
	* m4/compiler-name.m4: macro for deducing compiler name

2009-09-25  Sanel <karijes@users.sourceforge.net>

	* Jamconfig.in:
	* Jamrules: LIBS from configure should be used, not LDLIBS
	* m4/various.m4: use only gcc specific flags for gcc
	* Jamrules.in:
	* Jamrules: moving STDLIB to Jamrules; some warning flags for SunStudio
	* Jamconfig.in: use CFLAGS var name instead CCFLAGS, which caused jam to
	skip given flags for C code
	* src/tinyscheme/scheme.c: initialize/mark sink; this caused very strange
	crashes on SunStudio
	* m4/various.m4: use '-g' if gcc wasn't detected
	* src/tinyscheme/scheme.c: fix a warnings

2009-09-24  Sanel <karijes@users.sourceforge.net>

	* m4/dbus.m4:
	* src/EdbusConnection.cpp: dbus_watch_get_unix_fd() is marked as
	deprecated in newer dbus versions

2009-09-23  Sanel <karijes@users.sourceforge.net>

	* src/MimeType.cpp:
	* src/xdgmime/xdgmime.h:
	* src/xdgmime/xdgmime.c: added xdg_mime_get_mime_type_for_file2() that
	will always do stat() on target file; xdg_mime_get_mime_type_for_file()
	code was reverted to original implementation
	* test/mime.cpp: test for known crash on NetBSD, for previous xdgmime
	changes (Bug 155); dumped icon name test against object file

2009-09-21  Sanel <karijes@users.sourceforge.net>

	* src/MenuItem.cpp: removed included stdio.h header; made submenu arrows
	fixed size: looks much "normally"

2009-09-18  Sanel <karijes@users.sourceforge.net>

	* edelib/IconLoader.h:
	* src/IconLoader.cpp: use OR-ing to store settable options; much more
	convinient and verbose

2009-09-17  Sanel <karijes@users.sourceforge.net>

	* edelib/IconLoader.h: